Адаптив header и promo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>s
         </div>
     </section>
-    <section class="advantages">
+    <!-- <section class="advantages">
         <div class="container">
             <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__cards">
@@ -620,7 +620,7 @@
             <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
             <form class="feed-form feed-form_mt25" action="#">
         </div>
-
+    </div> -->
         <script src="https://kit.fontawesome.com/690bcd7296.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="js/slick.min.js"></script>
