Адаптив advantages и consult.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>s
         </div>
     </section>
-    <!-- <section class="advantages">
+    <section class="advantages">
         <div class="container">
             <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__cards">
@@ -81,15 +81,17 @@
             <div class="title title_consultation">Получите бесплатную консультацию <br> по подбору пульсометра </div>
             <div class="consultation__descr">Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут
             </div>
-            <form id="consultation-form" class="feed-form" action="#">
-                <input name="name" required maxlength="3" placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="number">
-                <input name="email" required placeholder="Ваш E-mail" type="email">
-                <button class="button button_submit">заказать консультацию</button>
-            </form>
+            <div class="form-wrapper">
+                <form id="consultation-form" class="feed-form" action="#">
+                    <input name="name" required maxlength="3" placeholder="Ваше имя" type="text">
+                    <input name="phone" required placeholder="Ваш телефон" type="number">
+                    <input name="email" required placeholder="Ваш E-mail" type="email">
+                    <button class="button button_submit">заказать консультацию</button>
+                </form>
+            </div>
         </div>
     </section>
-    <div class="carousel">
+    <!-- <div class="carousel">
         <div class="container">
             <div class="carousel__inner">
                 <div class="carousel__item">
@@ -621,11 +623,11 @@
             <form class="feed-form feed-form_mt25" action="#">
         </div>
     </div> -->
-        <script src="https://kit.fontawesome.com/690bcd7296.js" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="js/slick.min.js"></script>
-        <script src="js/jquery.validate.min.js"></script>
-        <script src="js/main.js"></script>
+    <script src="https://kit.fontawesome.com/690bcd7296.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
