--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
         </div>
     </section>
-    <!-- <div class="carousel">
+    <div class="carousel">
         <div class="container">
             <div class="carousel__inner">
                 <div class="carousel__item">
@@ -622,7 +622,7 @@
             <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
             <form class="feed-form feed-form_mt25" action="#">
         </div>
-    </div> -->
+    </div>
     <script src="https://kit.fontawesome.com/690bcd7296.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/slick.min.js"></script>
